--- a/figma-landing/styles.css
+++ b/figma-landing/styles.css
@@ -52,8 +52,15 @@
   text-align: left;
 }
 #desktop_pricing_light_items_row {
-    display: flex;
+  display: flex;
   flex-direction: row;
   align-items: center;
   text-align: center;
+}
+#desktop_partner_light_items_row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  gap: 20px;
 }
