--- a/partials/index.hero-header.partial.html
+++ b/partials/index.hero-header.partial.html
@@ -1,19 +1,28 @@
-<section class="container hero-header">
-  <nav class="hero-header__navbar">
-    <div class="hero-header__navbar__logo">
+<section class="hero">
+  <nav class="hero__navbar">
+    <div class="hero__logo">
       <img src="img/header-logo.png" alt="Figma land logo" />
     </div>
-    <div class="hero-header__navbar__burger">
-      <img src="img/header-burger.png" alt="Header burger" />
+    <div class="hero__burger">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        width="40"
+        height="32"
+        viewBox="0 0 40 32"
+        fill="none"
+      >
+        <path
+          d="M6.66797 8H33.3346V10.6667H6.66797V8ZM13.3346 14.6667H33.3346V17.3333H13.3346V14.6667ZM21.668 21.3333H33.3346V24H21.668V21.3333Z"
+          fill="white"
+        />
+      </svg>
     </div>
   </nav>
-  <article class="hero-header__text">
-    <h2 class="hero-header__text_header">The best products start with Figma</h2>
-    <p class="hero-header__text_paragraph">
-      Most calendars are designed for teams.
-    </p>
+  <article class="hero__content">
+    <h2 class="hero__title">The best products start with Figma</h2>
+    <p class="hero__description">Most calendars are designed for teams.</p>
   </article>
-  <div class="hero-header_button">
-    <a href="#">Try For</a>
+  <div class="hero__cta">
+    <a href="#">Try For Free</a>
   </div>
 </section>
