--- a/partials/index.hero-header.partial.html
+++ b/partials/index.hero-header.partial.html
@@ -21,8 +21,9 @@
   <article class="hero__content">
     <h2 class="hero__title">The best products start with Figma</h2>
     <p class="hero__description">Most calendars are designed for teams.</p>
+    <div class="hero__cta">
+      <a href="#">Try For Free</a>
+    </div>
+    <div class="hero_padding-bottom"></div>
   </article>
-  <div class="hero__cta">
-    <a href="#">Try For Free</a>
-  </div>
 </section>
