add features section

--- a/css/global.css
+++ b/css/global.css
@@ -12,6 +12,7 @@
   /* Colors */
   --hero-content-text: #FFF;
   --hero-button-primary: #2091F9;
+  --color-text: #252B42;
 
   /* Fonts */
   --font-primary: 'Agdasima', sans-serif;
