add organize section

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,4 @@
 @import "./global.css";
 @import "./index.navbar.css";
-@import "./index.features.css"
+@import "./index.features.css";
+@import "./index.organize.css";
