image path refactor

--- a/partials/index.organize.partial.html
+++ b/partials/index.organize.partial.html
@@ -5,6 +5,6 @@
   </article>
   <a class="organize__button" href="#">Try For Free</a>
   <div class="organize__image-wrapper">
-    <img src="../img/organize-macbook-pro.jpg" alt="Macbook pro image">
+    <img src="img/organize-macbook-pro.jpg" alt="Macbook pro image">
   </div>
 </section>
