--- a/partials/index.hero-header.partial.html
+++ b/partials/index.hero-header.partial.html
@@ -1,7 +1,7 @@
 <section class="hero">
   <nav class="hero__navbar">
     <div class="hero__logo">
-      <img src="img/header-logo.png" alt="Figma land logo" />
+      <img src="../img/header-logo.png" alt="Figma land logo" />
     </div>
     <div class="hero__burger">
       <svg
