--- a/css/index.features.css
+++ b/css/index.features.css
@@ -14,6 +14,7 @@
     width: 285px;
 
     .features__header {
+      color: var(--color-text);
       padding: 10px;
       font-size: 48px;
       font-style: normal;
@@ -23,6 +24,7 @@
     }
 
     .features__subheader {
+      color: var(--color-text-secondary);
       padding: 10px;
       font-size: 28px;
       font-style: normal;
@@ -33,11 +35,12 @@
   }
 
   .features__video {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 6.7px 0;
 
     iframe {
-      width: 386px;
-      height: 216px;
       border-radius: 14.688px;
       box-shadow: 0px 2.67px 20.696px 0px rgba(0, 0, 0, 0.15);
     }
@@ -68,6 +71,7 @@
       }
 
       .features__card__paragraph {
+        color: var(--color-text-secondary);
         font-size: 18px;
         font-style: normal;
         font-weight: 400;
@@ -75,5 +79,9 @@
         letter-spacing: 0.2px;
       }
     }
+  }
+
+  .newsletter__form {
+    
   }
 }
