--- a/css/index.organize.css
+++ b/css/index.organize.css
@@ -26,7 +26,7 @@
 
     .organize__paragraph {
       width: 265px;
-      color: var(--color-text);
+      color: var(--color-text-secondary);
       padding: 10px;
       font-size: 28px;
       font-style: normal;
