add partners section

--- a/css/global.css
+++ b/css/global.css
@@ -18,6 +18,7 @@
   --color-input-border: #E8E8E8;
   --color-input-background: #F4F4F4;
   --color-input-placeholder: #18171D;
+  --color-partners-border: #D8D8D8;
 
   /* Fonts */
   --font-primary: 'Agdasima', sans-serif;
