--- a/css/index.css
+++ b/css/index.css
@@ -2,4 +2,5 @@
 @import "./index.navbar.css";
 @import "./index.features.css";
 @import "./index.organize.css";
-@import "./index.newsletter.css"
+@import "./index.newsletter.css";
+@import "./index.partners.css"
