add partners section and refactor file names

--- a/css/index.css
+++ b/css/index.css
@@ -3,4 +3,5 @@
 @import "./index.features.css";
 @import "./index.organize.css";
 @import "./index.newsletter.css";
-@import "./index.partners.css"
+@import "./index.partners.css";
+@import "./index.testimonials.css";
