add pricing section, change filename

--- a/css/index.css
+++ b/css/index.css
@@ -5,3 +5,4 @@
 @import "./index.newsletter.css";
 @import "./index.partners.css";
 @import "./index.testimonials.css";
+@import "./index.pricing.css";
