--- a/css/global.css
+++ b/css/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Agdasima:wght@400;700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 *,
 *::after,
@@ -10,24 +10,28 @@
 
 :root {
   /* Colors */
-  --hero-content-text: #FFF;
-  --button-primary: #2091F9;
-  --hero-button-primary: #2091F9;
-  --color-text: #252B42;
+  --hero-content-text: #fff;
+  --button-primary: #2091f9;
+  --button-white: #fff;
+  --hero-button-primary: #2091f9;
+  --color-text: #252b42;
   --color-text-secondary: #374754;
-  --color-input-border: #E8E8E8;
-  --color-input-background: #F4F4F4;
-  --color-input-placeholder: #18171D;
-  --color-partners-border: #D8D8D8;
-
+  --color-text-blue: #2091f9;
+  --color-input-border: #e8e8e8;
+  --color-input-background: #f4f4f4;
+  --color-input-placeholder: #18171d;
+  --color-partners-border: #d8d8d8;
+  --dark-background: #252b42;
+  --light-background: #fff;
+  --blue-background: #2091f9;
+  --border-grey: #dedede;
+  
   /* Fonts */
-  --font-primary: 'Agdasima', sans-serif;
+  --font-primary: "Agdasima", sans-serif;
 
   /* Text sizes */
 
   /* Line heigths */
-
-  /* Buttons */
 
   /* Containers and margins */
   --container-width: 1200px;
