--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,4 @@
 @import "./index.partners.css";
 @import "./index.testimonials.css";
 @import "./index.pricing.css";
+@import "./index.contact-us.css";
