--- a/css/index.css
+++ b/css/index.css
@@ -7,3 +7,4 @@
 @import "./index.testimonials.css";
 @import "./index.pricing.css";
 @import "./index.contact-us.css";
+@import "./index.footer.css";
