--- a/css/index.navbar.css
+++ b/css/index.navbar.css
@@ -7,12 +7,20 @@
   background-repeat: no-repeat;
   background-size: cover;
   clip-path: polygon(
-    0 0,     /* top-left corner */
-    100% 0,  /* top-right corner */
-    100% 90%,/* right side, partway down */
-    50% 100%,/* bottom center (the "V" point) */
-    0 90%    /* left side, partway down */
+    0 0,
+    /* top-left corner */ 100% 0,
+    /* top-right corner */ 100% 90%,
+    /* right side, partway down */ 50% 100%,
+    /* bottom center (the "V" point) */ 0 90% /* left side, partway down */
   );
+
+  .hero__navbar-list {
+    display: none;
+  }
+
+  .hero__socials {
+    display: none;
+  }
 
   .hero__navbar {
     display: flex;
@@ -41,7 +49,6 @@
     text-align: center;
     color: var(--hero-content-text);
     width: 100%;
-    
 
     .hero__title {
       padding: 10px;
@@ -59,6 +66,10 @@
       font-weight: 400;
       line-height: 40px;
       letter-spacing: 0.2px;
+    }
+
+    .hero__description-desktop {
+      display: none;
     }
   }
 
@@ -87,5 +98,71 @@
   .hero_padding-bottom {
     min-height: 128px;
     min-width: 378px;
+  }
+
+  @media (min-width: 768px) {
+    .hero__navbar {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      padding: 64px 0;
+
+      .hero__burger {
+        display: none;
+      }
+
+      .hero__navbar-list {
+        display: flex;
+        list-style: none;
+        gap: 21px;
+
+        .hero__navbar-link {
+          text-decoration: none;
+          font-size: 15px;
+          color: var(--hero-content-text);
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28px; /* 186.667% */
+          letter-spacing: 0.2px;
+
+          .hero__navbar-list-item {
+            padding: 10px;
+          }
+        }
+      }
+
+      .hero__socials {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+      }
+    }
+
+    .hero__content {
+      .hero__description {
+        display: none;
+      }
+
+      .hero__title {
+        font-size: 74px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 84px; /* 113.514% */
+        letter-spacing: 0.2px;
+      }
+
+      .hero__description-desktop {
+        display: flex;
+        padding: 10px;
+        align-items: center;
+        justify-content: center;
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px; /* 142.857% */
+        letter-spacing: 0.2px;
+      }
+    }
   }
 }
