add desktop view of organize

--- a/css/index.features.css
+++ b/css/index.features.css
@@ -84,6 +84,7 @@
 
 @media (min-width: 768px) {
   .features {
+    padding-top: 80px;
     .features__text-content {
       width: 100%;
       .features__subheader-mobile {
