--- a/css/index.partners.css
+++ b/css/index.partners.css
@@ -79,3 +79,37 @@
     letter-spacing: 0.1px;
   }
 }
+
+.mobile {
+  display: none !important;
+}
+
+@media (min-width: 768px) {
+  .partners {
+    padding: 80px;
+
+    .partners__cards {
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 0;
+      padding: 0;
+
+      .partners__cards-client {
+        justify-content: space-between; /* Distribute space evenly */
+        width: 200px; /* Set a fixed width for all cards */
+        height: 150px; /* Set a fixed height for all cards */
+
+        img {
+          max-width: 100%; /* Ensure the image doesn't exceed the card width */
+          max-height: 150px; /* Limit the height of the image */
+          object-fit: contain;
+        }
+      }
+    }
+  }
+
+  .mobile {
+    display: flex !important;
+  }
+}
