--- a/css/index.testimonials.css
+++ b/css/index.testimonials.css
@@ -29,7 +29,6 @@
     .testimonials__card-paragraph {
       color: var(--color-text-secondary);
       text-align: center;
-      font-family: Roboto;
       font-size: 13.526px;
       font-style: normal;
       font-weight: 700;
@@ -73,5 +72,36 @@
     font-weight: 700;
     line-height: 28px; /* 140% */
     letter-spacing: 0.1px;
+  }
+}
+
+@media (min-width: 768px) {
+  .testimonials {
+    .testimonials__card {
+      .testimonials__card-paragraph {
+        font-size: 28px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 40px; /* 142.857% */
+        letter-spacing: 0.2px;
+      }
+      .testimonials__card-review {
+        .testimonials__card-review-name {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 23px; /* 143.75% */
+          letter-spacing: 0.1px;
+        }
+
+        .testimonials__card-review-title {
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 28px; /* 186.667% */
+          letter-spacing: 0.2px;
+        }
+      }
+    }
   }
 }
