--- a/css/index.contact-us.css
+++ b/css/index.contact-us.css
@@ -35,107 +35,161 @@
     }
   }
 
-  .contact-us__socials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 10px;
-    gap: 24px;
-  }
-
-  .contact-us__contacts {
+  .contact-us__content {
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 50px;
 
-    .contact-us__contacts-item {
+    .contact-us__map {
+      display: none;
+    }
+    .contact-us__socials {
       display: flex;
-      gap: 10px;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;
-
-      .contact-us__contacts-text {
-        display: flex;
-        align-items: first baseline;
-        color: var(--color-text-secondary);
-        padding: 10px;
-        font-size: 16px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 23px; /* 143.75% */
-        letter-spacing: 0.1px;
-      }
-    }
-  }
-
-  .contact-us__form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 52px 49px;
-    gap: 45px;
-    border-radius: 20px;
-    border: 1px solid var(--border-form-white);
-    /* SHADOW */
-    box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
-    width: 100%;
-    
-    .contact-us__form-label {
-      color: var(--color-text);
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 28px; /* 140% */
-      letter-spacing: 0.1px;
+      padding: 10px;
+      gap: 24px;
     }
 
-    .contact-us__form-wraper {
+    .contact-us__contacts {
       display: flex;
       flex-direction: column;
+      gap: 10px;
+
+      .contact-us__contacts-item {
+        display: flex;
+        gap: 10px;
+        justify-content: flex-start;
+        align-items: center;
+
+        .contact-us__contacts-text {
+          display: flex;
+          align-items: first baseline;
+          color: var(--color-text-secondary);
+          padding: 10px;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 23px; /* 143.75% */
+          letter-spacing: 0.1px;
+        }
+      }
+    }
+
+    .contact-us__form {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 52px 49px;
       gap: 45px;
-      align-items: stretch;
+      border-radius: 20px;
+      border: 1px solid var(--border-form-white);
+      /* SHADOW */
+      box-shadow: 0px 13px 19px 0px rgba(0, 0, 0, 0.07);
       width: 100%;
 
-      .contact-us__form-input {
-        padding: 19px 20px;
-        border-radius: 39px;
-        border: 1px solid var(--border-input);
-        background-color: var(--background-input);
+      .contact-us__form-label {
         color: var(--color-text);
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 16px; /* 106.667% */
-        letter-spacing: 0.1px;
-      }
-
-      .contact-us__form-textarea {
-        padding: 23px 20px;
-        border: 1px solid var(--border-input);
-        background-color: var(--background-input);
-        color: var(--color-text);
-        font-family: Arial, sans-serif;
-        font-size: 15px;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 16px; /* 106.667% */
-        letter-spacing: 0.1px;
-      }
-
-      .contact-us__form-button {
-        display: flex;
-        width: fit-content;
-        padding: 18px 38px;
-        background-color: var(--blue-background);
-        border-radius: 35px;
-        border: none;
         font-size: 20px;
         font-style: normal;
-        font-weight: 400;
-        line-height: 20px; /* 100% */
-        letter-spacing: 0.2px;
-        color: var(--hero-content-text);
+        font-weight: 700;
+        line-height: 28px; /* 140% */
+        letter-spacing: 0.1px;
+      }
+
+      .contact-us__form-wraper {
+        display: flex;
+        flex-direction: column;
+        gap: 45px;
+        align-items: stretch;
+        width: 100%;
+
+        .contact-us__form-input {
+          padding: 19px 20px;
+          border-radius: 39px;
+          border: 1px solid var(--border-input);
+          background-color: var(--background-input);
+          color: var(--color-text);
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 16px; /* 106.667% */
+          letter-spacing: 0.1px;
+        }
+
+        .contact-us__form-textarea {
+          padding: 23px 20px;
+          border: 1px solid var(--border-input);
+          background-color: var(--background-input);
+          color: var(--color-text);
+          font-family: Arial, sans-serif;
+          font-size: 15px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 16px; /* 106.667% */
+          letter-spacing: 0.1px;
+        }
+
+        .contact-us__form-button {
+          display: flex;
+          width: fit-content;
+          padding: 18px 38px;
+          background-color: var(--blue-background);
+          border-radius: 35px;
+          border: none;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: 20px; /* 100% */
+          letter-spacing: 0.2px;
+          color: var(--hero-content-text);
+        }
+      }
+    }
+  }
+
+  @media (min-width: 768px) {
+    .contact-us__content {
+      display: grid;
+      grid-template-columns: 1fr 1.5fr;
+      grid-template-rows: 1fr 3fr 0.5fr;
+      
+
+      .contact-us__form {
+        order: 1;
+        grid-row: span 3;
+        width: 100%;
+      }
+
+      .contact-us__contacts {
+        order: 2;
+        display: flex;
+        flex-direction: row;
+        width: fit-content;
+        text-align: center;
+       
+        .contact-us__contacts-item {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+
+      .contact-us__map {
+        display: flex;
+        order: 3;
+        
+        iframe {
+          width: 100%;
+          height: 100%;
+          border: 0;
+          border-radius: 48px;
+          }
+      }
+
+      .contact-us__socials {
+        order: 4;
+        justify-content: flex-start;
       }
     }
   }
